# raiti

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  rust.yml
config/: lessons.yaml
data/: base_keys.yaml  eti_keys.yaml  index.yaml  intro.yaml  l01_intro.yaml  l02_base_keys.yaml  l03_eti_keys.yaml  l04_urn_keys.yaml  l05_review.yaml  l06_ymv_keys.yaml  l07_pzo_keys.yaml  l08_wgb_keys.yaml  l09_review2.yaml  l10_qhc_keys.yaml  l11_x_keys.yaml  l12_more_symbols.yaml  lessons.yaml
data/keyboards/: pc_querty.yaml  querty.yaml
data/lessons/: base_keys.yaml
doc/: CONTENT_CREATOR.md
src/: beeper.rs  config.rs  environment.rs  error.rs  exercise.rs  exercise_component.rs  font.rs  keyboard.rs  keyboard_component.rs  keyboard_config.rs  lesson.rs  main.rs
src/config/: exercise.rs  index.rs  keyboard.rs  lesson.rs  mod.rs
test_data/: test_keyboard.yaml
