[package]
name = "raiti"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { git = "https://github.com/iced-rs/iced.git", features = [
    "tokio",
    "lazy",
    "canvas",
] }
smol_str = "0.2.2"
serde = { version = "1.0.210", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "1.0.63"
dirs-next = "2.0.0"
tokio = { version = "1.40.0", features = ["io-util", "fs"] }
handlebars = "6.1.0"
serde_json = "1.0.128"
rodio = { version = "0.19.0" }
