[package]
name = "raiti"
version = "0.2.0"
edition = "2021"

[dependencies]
iced = { git = "https://github.com/iced-rs/iced.git", features = [
    "tokio",
    "lazy",
    "canvas",
] }
smol_str = "0.3.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "2.0.12"
dirs-next = "2.0.0"
tokio = { version = "1.46.1", features = ["io-util", "fs"] }
handlebars = "6.3.2"
serde_json = "1.0.140"
rodio = { version = "0.20.1" }
