[package]
name = "raiti"
version = "0.2.0"
edition = "2021"

[dependencies]
iced = { git = "https://github.com/iced-rs/iced.git", features = [
    "tokio",
    "lazy",
    "canvas",
] }
smol_str = "0.3.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "2.0.17"
dirs-next = "2.0.0"
tokio = { version = "1.48.0", features = ["io-util", "fs"] }
handlebars = "6.4.0"
serde_json = "1.0.148"
rodio = { version = "0.21.1" }
